--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -36,10 +36,12 @@
 .opacity-80,
 .opacity-80-100 { opacity: 0.8; filter: alpha(opacity=80); }
 .opacity-90-100 { opacity: 0.9; filter: alpha(opacity=90); }
-.opacity-80-100:hover, .opacity-90-100:hover { opacity: 1; filter: alpha(opacity=100); }
 
-.opacity-60-80  { opacity: 0.6; filter: alpha(opacity=60); }
+.opacity-60-80,
+.opacity-60-100 { opacity: 0.6; filter: alpha(opacity=60); }
 .opacity-60-80:hover  { opacity: 0.8; filter: alpha(opacity=80); }
+.opacity-60-100:hover, .opacity-80-100:hover, 
+.opacity-90-100:hover { opacity: 1; filter: alpha(opacity=100); }
 
 .pointer { cursor: pointer; }
 
@@ -222,6 +224,11 @@ input.error:focus, textarea.error:focus {
 	-webkit-border-radius: 5px 5px 0 0 !important;
 	-moz-border-radius: 5px 5px 0 0 !important;
 	border-radius: 5px 5px 0 0 !important; }
+
+.rounded-5-top-right {
+	-webkit-border-radius: 0 5px 0 0 !important;
+	-moz-border-radius: 0 5px 0 0 !important;
+	border-radius: 0 5px 0 0 !important; }
 	
 .rounded-5-left {
 	-webkit-border-radius: 5px 0 0 5px !important;
@@ -242,6 +249,11 @@ input.error:focus, textarea.error:focus {
 	-webkit-border-radius: 8px 8px 0 0 !important;
 	-moz-border-radius: 8px 8px 0 0 !important;
 	border-radius: 8px 8px 0 0 !important; }
+
+.rounded-8-top-right {
+	-webkit-border-radius: 0 8px 0 0 !important;
+	-moz-border-radius: 0 8px 0 0 !important;
+	border-radius: 8 8px 0 0 !important; }
 
 .rounded-8-bottom {
 	-webkit-border-radius: 0 0 8px 8px !important;
@@ -439,6 +451,10 @@ input.error:focus, textarea.error:focus {
 	border: none !important; 
 	text-shadow: none; }
 
+.btn.btn-silver.light { background-color: #b0b0b0 !important; }
+.btn.btn-silver.light:hover,
+.btn.btn-silver.light.disabled { background-color: #797979 !important; }
+
 /*
 .btn.btn-silver.btn-large { background-color: #a0a0a0; }
 .btn.btn-silver.btn-large:hover { background-color: #777; }
@@ -589,7 +605,9 @@ input.error:focus, textarea.error:focus {
 .load .btn.btn-silver, .load .btn.btn-silver:hover { background: #555 !important; }
 
 .btn-silver.pushed, .btn-silver.pushed:hover,
-.btn-silver.load, .btn-silver.load:hover { background: #555 !important; }	
+.btn-silver.load, .btn-silver.load:hover,
+.btn-silver.light.pushed, .btn-silver.light.pushed:hover,
+.btn-silver.light.load, .btn-silver.light.load:hover { background: #555 !important; }	
 
 .btn-red.pushed, .btn-red.pushed:hover,
 .btn-red.load, .btn-red.load:hover { background: #a6321d; }	
