--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -661,7 +661,8 @@ a.feed-intro .highlight { font-weight: bold; }
 	
 /* -- endorsement -- */
 
-.item .panel .endorsement-box{
+.item .panel .endorsement-box {
+	line-height: 140%;
 	padding-top: 8px;
 	color: #555; }
 
@@ -706,6 +707,7 @@ a.feed-intro .highlight { font-weight: bold; }
 	min-height: 28px; 
 	margin-bottom: 12px;
 	padding-left: 36px; 
+	line-height: 140%;
 	clear: both;
 	color: #666; }
 	
