--- a/app/views/users/suggestions.html.erb
+++ b/app/views/users/suggestions.html.erb
@@ -1,15 +1,17 @@
-<div class="profile-box unit-box well-box border-box rounded-8 alias-smooth relative">
-       
-  <%=render :partial => "box", :locals => {:user => @user}%>
-
-  <div id="user_suggestions_box">
-    <div class="well-box border-box rounded-8" style="margin: 2px 0 12px;">
-      <ul id="user_suggestions">
-      </ul>
-    </div> 
-  </div>
-
-</div> <!-- /profile-box -->
+<div id="user_suggestions_box">
+	<div class="box-title" style="margin-top: -6px;">
+		<a class="dark" style="" href="/">Home </a>
+		<span style="padding: 0 4px;">
+			&bull;
+		</span> 
+		People to follow
+	 </div>
+	 
+	<div class="well-box border-box rounded-8" style="margin: 2px 0 12px;">
+		<ul id="user_suggestions">
+		</ul>
+	</div>
+</div>
 
 
 <%content_for :javascript do%>
