--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -47,6 +47,8 @@ a:focus { outline: none; }
 
 a.dark       { color: #ccc;  }
 a.dark:hover { color: white; }
+a.dark i { opacity: 0.8; filter: alpha(opacity=80); }
+a.dark:hover i { opacity: 1; filter: alpha(opacity=100); }
 
 a.light       { color: #177DBE; }
 a.light:hover { color: #105e90; }
