wtf invite link

--- a/app/views/users/suggestions.html.erb
+++ b/app/views/users/suggestions.html.erb
@@ -13,6 +13,11 @@
 	</div>
 </div>
 
+<div class="box-footnote txt s">
+	Missing someone? <%=link_to "Invite them.",new_invite_path(:src => "bar"),
+				:class => "dark"%>
+</div>
+
 
 <%content_for :javascript do%>
   <script type="text/javascript">  
