slide animations for hotmail connect.

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -43,7 +43,7 @@
 	      </a>
 	      
 	      <a id="hotmail_connect_button"
-            onclick="$('#hotmail_connect').toggle();$('#hotmail_email').phocus()"
+            onclick="$('#hotmail_connect').slideToggle('fast');$('#hotmail_email').phocus()"
 	          class="btn btn-small btn-silver shaded square" 
 	          style="width: 74px;
 	          border-left: 1px solid #ababab; 
