--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -103,8 +103,11 @@
 <div id="user_suggestions_box" style="display:none">
   <div class="box-title" style="margin-top: -6px;">
     People to follow
+    <span style="padding: 0 4px;">
+			&bull;
+		</span> 
     <a class="dark" 
-      style="float: right;" 
+      style="" 
       href="<%=user_suggestions_path(:src => 'feed')%>">
     	More
     </a>
