--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,9 @@
                                                 :first_name,:last_name,:handle,
                                                 :created_at],
                                    :methods => [:square_image_url,:full_name,
-                                                  :age,:obfuscated_id],
+                                                  :age,:obfuscated_id,
+                                                  :google_authorized?,:hotmail_authorized?,
+                                                  :yahoo_authorized?],
                                    :include => {
                                     :setting => {
                                      :only    => [],
