new create arrow

--- a/app/views/purchases/_input.html.erb
+++ b/app/views/purchases/_input.html.erb
@@ -18,10 +18,10 @@
           :style => ""%>
 
       <a id="purchase_search" 
-          class="btn awesome btn-large btn-red border-box rounded-3 go shaded" 
+          class="btn awesome btn-large btn-silver border-box rounded-3 go shaded" 
           alt="Search">
           <%if local_assigns[:search_action].nil?%>
-          	<%=image_tag "icons/PNG-Arrows/32px-white/rounded-big-2-01-white.png", 
+          	<%=image_tag "icons/PNG-Arrows/32px/rounded-big-2-01.png", 
                 :style => "height: 14px; margin-top: 13px; vertical-align: top;",
                 :alt => ""%>
           <%else%>
