--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -165,7 +165,7 @@
 </div> <!-- /create-box -->
 
 
-<div class="box-title feed-title relative">
+<div class="box-title feed-title relative" style="padding-bottom: 14px;">
 	Your feed
 	<a id="add_new_purchase"
     class="dark" 
@@ -186,7 +186,7 @@
 </a>
 <%end%>
 
-<div class="feed-container" style="margin-top: 2px;">
+<div class="feed-container">
 	<div id="feed" class="feed relative">
 	</div> 
 	
