--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -129,7 +129,7 @@
 <%end%>
 
 
-<div class="box-title profile-feed-title relative">
+<div class="box-title profile-feed-title relative" style="padding-bottom: 14px;">
 	<%=is_current_user(@user) ? "Your" : "#{@user.first_name}'s"%> items
 </div>
 
