cleaning up sid's password inline mess

--- a/app/views/hotmail/_auth_dialog.html.erb
+++ b/app/views/hotmail/_auth_dialog.html.erb
@@ -1,7 +1,7 @@
 
     <div id="hotmail_connect" 
       class="hotmail-connect"
-      style="display:none">
+      style="display:none;">
     
 	    <div class="form-row">
 		    <div class="label-box txt s border-box inline-block">
@@ -22,8 +22,7 @@
 		    </div>
 		    <div class="action border-box inline-block">
           <%=password_field_tag :hotmail_password,"",
-                :class => "enter m border-box rounded-2 inline",
-                :style => "height:28px;width:100%"%>
+                :class => "enter m border-box rounded-2 inline"%>
 			  </div>
 		    <div class="extras txt s border-box inline-block">
 		    	<i class="icon-lock icon-white opacity-50"></i>
