--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -420,7 +420,7 @@ ul.notifications li.user-action-box {
 .import-email-buttons .btn.connected img.connected { display: inline-block; }
 .import-email-buttons .btn.connected span.unconnected { display: none; }
 
-.hotmail-connect { padding-top: 26px; display: none; }
+.hotmail-connect { padding-top: 26px; }
 .hotmail-connect .form-row { padding-bottom: 9px; }
 .hotmail-connect .form-row .action { width: 50%; height: 28px; vertical-align: top; }
 .hotmail-connect .form-row .extras { vertical-align: top; padding-left: 8px; width: 25%; height: 28px; line-height: 28px; }
@@ -927,7 +927,7 @@ a.feed-intro .highlight { font-weight: bold; }
 .profile-feed { 
 	background: white;
 	z-index: 2;
-	padding: 0 6px 16px; }
+	padding: 0 3.819444444444% 16px; }
 	
 .card { 
 	width: 50%;
