--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -27,7 +27,7 @@
     </div>
     <span class="txt s bottom-line opacity-80" href="javascript:void(0)">
       <%if self.current_user.email_authorized?%>
-        Checking for new purchases in <%=pluralize days_to_email_import,"day"%>
+        Checking for new purchases in: <%=pluralize days_to_email_import,"day"%>
       <%else%>
         Connect an email, review your purchases.
       <%end%>
@@ -47,7 +47,7 @@
           <i class="icon-loading icon-white"></i>
         </span>
         <%=image_tag "logos/import-gmail-connected-2x.png",
-            :style => "width: 50px; margin-top: -4px;",
+            :style => "width: 50px; padding-right: 2px; margin-top: -4px;",
             :class => "connected inline"%>
       </a>
       
@@ -65,7 +65,7 @@
           <i class="icon-loading icon-white"></i>
         </span>
         <%=image_tag "logos/import-hotmail-connected-2x.png",
-            :style => "width: 55px; margin-top: -2px;",
+            :style => "width: 55px; padding-right: 4px; margin-top: -2px;",
             :class => "connected"%>
       </a>
       
@@ -83,7 +83,7 @@
           <i class="icon-loading icon-white"></i>
         </span>
         <%=image_tag "logos/import-yahoo-connected-2x.png",
-            :style => "width: 55px; margin-top: -2px;",
+            :style => "width: 55px; padding-right: 4px; margin-top: -2px;",
             :class => "connected"%>
       </a>
     
