--- a/app/views/users/_box.html.erb
+++ b/app/views/users/_box.html.erb
@@ -7,14 +7,19 @@
     <div class="basics border-box">
     	<span class="relative">
     		<%=h user.full_name%> 
-    		<a href="#" rel="tooltip" 
-    		title="Connected to Mine e-receipt importer"
-    		data-placement="right"
-    			class="absolute opacity-80-100">
-    		<%=image_tag image_path('import-star-check-ccc-32-2x.png'),
-    				:class => "",
-	    			:style => "height: 24px;"%>
-	    	</a>
+
+        <%if user.email_authorized?%>
+          <a href="#" 
+            rel="tooltip" 
+            title="Connected to Mine e-receipt importer"
+            data-placement="right"
+            class="absolute opacity-80-100">
+
+            <%=image_tag image_path('import-star-check-ccc-32-2x.png'),
+                :class => "",
+                :style => "height: 24px;"%>
+          </a>
+        <%end%>
     	</span>
     	<br>
     	<span class="item-count">
