hooking up tooltips on connect buttons.

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -39,7 +39,10 @@
           class="btn btn-small btn-silver shaded 
                   rounded-3-left <%=self.current_user.google_authorized? ? "connected" : ''%>"
           href="javascript:void(0)" 
-          style="width: 74px;">
+          style="width: 74px;"
+          rel="tooltip"
+          title="Gmail or Google Apps account"
+          data-placement="bottom">
         <span class="unconnected">
           <%=image_tag "logos/email-btn-gmail-2x.png",
               :style => "width: 40px; padding-bottom: 1px;",
@@ -57,7 +60,10 @@
                   square  <%=self.current_user.hotmail_authorized? ? "connected" : ''%>" 
           style="width: 74px;
           border-left: 1px solid #ababab; 
-          border-left: 1px solid rgba(0,0,0,0.16);">
+          border-left: 1px solid rgba(0,0,0,0.16);"
+          rel="tooltip"
+          title="Hotmail, Outlook.com, Live or MSN account"
+          data-placement="bottom">
         <span class="unconnected">
           <%=image_tag "logos/email-btn-hotmail-2x.png",
               :style => "width: 62px; padding-bottom: 1px;",
@@ -75,7 +81,10 @@
           href="javascript:void(0)" 
           style="width: 74px;
           border-left: 1px solid #ababab; 
-          border-left: 1px solid rgba(0,0,0,0.16);">
+          border-left: 1px solid rgba(0,0,0,0.16);"
+          rel="tooltip"
+          title="Yahoo, sbcglobal.net, att.net, verizon.net, bellsouth.net, swbell.net or ameritech.net account"
+          data-placement="bottom">
         <span class="unconnected">
           <%=image_tag "logos/email-btn-yahoo-2x.png",
               :style => "width: 53px;",
@@ -201,10 +210,5 @@
     new Denwen.Views.Feed.Show({
       successEmailConnectURL: "<%=unapproved_purchases_path(:mode => 'live')%>",
       source: "<%=h @source%>"});
-
-    <%if self.current_user.hotmail_authorized?%>
-      $('#hotmail_connect_button').removeAttr('onclick');
-    <%end%>
-
   </script>
 <%end%>
