--- a/app/views/users/_byline.html.erb
+++ b/app/views/users/_byline.html.erb
@@ -15,7 +15,7 @@
           <%=link_to  'Save', 
 	            'javascript:void(0)', 
 	            :id     => 'user_update',
-	            :class  => 'btn btn-small btn-blue',
+	            :class  => 'btn btn-small btn-silver',
 	            :style  => self.current_user.byline.present? ?
 	                        'display:none' :
 	                        ''%>   
