hotmail quickly styled in welcome connect

--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -9,26 +9,30 @@
 	<div style="padding: 12px 0 22px;">
 	
 		<a id="google_connect_button"
-		   class="btn btn-large btn-silver shaded rounded-3" 
+		   class="btn btn-large btn-silver shaded rounded-3-left inline-block" 
 		    href="javascript:void(0)" 
-		    style="width: 48%;">
+		    style="width: 30%;">
 		  <%=image_tag "logos/email-gmail-logo-30.png",
 		      :class => "hide-when-loading"%>
 		  <i class="icon-loading icon-white"></i>
 		</a>
-		<a id="yahoo_connect_button"
-		    class="btn btn-large btn-silver shaded rounded-3" 
-		    href="javascript:void(0)" 
-		    style="margin-left: 1.61%; width: 48%;">
-		  <%=image_tag "logos/email-yahoomail-logo-30.png",
+		
+		<a id="hotmail_connect_button"
+        onclick="$('#hotmail_connect').slideToggle('fast');$('#hotmail_email').phocus()"
+		    class="btn btn-large btn-silver shaded square inline-block" 
+		    style="width: 30%; border-left: 1px solid #ababab; 
+          border-left: 1px solid rgba(0,0,0,0.16);">
+		  <%=image_tag "logos/email-hotmail-logo-30.png",
 		      :class => "hide-when-loading"%>
 		  <i class="icon-loading icon-white"></i>
 		</a>
-		<a id="hotmail_connect_button"
-        onclick="$('#hotmail_connect').slideToggle('fast');$('#hotmail_email').phocus()"
-		    class="btn btn-large btn-silver shaded rounded-3" 
-		    style="margin-left: 1.61%; width: 48%;">
-		  <%=image_tag "logos/email-yahoomail-logo-30.png",
+		
+		<a id="yahoo_connect_button"
+		    class="btn btn-large btn-silver shaded rounded-3-right inline-block" 
+		    href="javascript:void(0)" 
+		    style="width: 30%; border-left: 1px solid #ababab; 
+          border-left: 1px solid rgba(0,0,0,0.16);">
+		  <%=image_tag "logos/email-yahoo-logo-30.png",
 		      :class => "hide-when-loading"%>
 		  <i class="icon-loading icon-white"></i>
 		</a>
