--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -43,7 +43,7 @@
 
 
 	<div class="txt s">
-		Mine does not store your password, receipts or emails.
+		Mine revives e-receipts in your inbox. No emails are stored.
 		<a style="float: right;" class="opacity-80-100 transition-opacity" 
         href="<%=root_path(:src => 'skip')%>">
 			Skip
