tooltip tweak, home mentions hotmail

--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -274,9 +274,8 @@
 					</div>
 					<h3>Import.</h3>
 					<p style="padding: 0 14px; text-align: left;">
-						Connect your Gmail or Yahoo! 
-						account to create your Mine profile 
-						in seconds.
+						Connect a Gmail, Hotmail or Yahoo! 
+						account to create your Mine in seconds.
 					</p>
 				</div>
 				
