--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -41,7 +41,7 @@
           href="javascript:void(0)" 
           style="width: 74px;"
           rel="tooltip"
-          title="Gmail or Google Apps account"
+          title="Gmail or Google Apps"
           data-placement="bottom">
         <span class="unconnected">
           <%=image_tag "logos/email-btn-gmail-2x.png",
@@ -62,7 +62,7 @@
           border-left: 1px solid #ababab; 
           border-left: 1px solid rgba(0,0,0,0.16);"
           rel="tooltip"
-          title="Hotmail, Outlook.com, Live or MSN account"
+          title="Hotmail, Outlook.com, Live or MSN"
           data-placement="bottom">
         <span class="unconnected">
           <%=image_tag "logos/email-btn-hotmail-2x.png",
@@ -83,7 +83,7 @@
           border-left: 1px solid #ababab; 
           border-left: 1px solid rgba(0,0,0,0.16);"
           rel="tooltip"
-          title="Yahoo, sbcglobal.net, att.net, verizon.net, bellsouth.net, swbell.net or ameritech.net account"
+          title="Yahoo, sbcglobal.net, att.net, verizon.net, bellsouth.net, swbell.net or ameritech.net"
           data-placement="bottom">
         <span class="unconnected">
           <%=image_tag "logos/email-btn-yahoo-2x.png",
