mention hotmail connect in emails.

--- a/app/views/user_mailer/friend_imported.text.html.erb
+++ b/app/views/user_mailer/friend_imported.text.html.erb
@@ -28,5 +28,5 @@
     
     <p style="color: #888; max-width: 300px; margin-left: auto; padding: 16px 0 8px; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
-    	Mine's email importer works with Gmail or Yahoo! accounts. Mine doesn't store any emails, e-receipts or passwords.
+    	Mine's email importer works with Gmail, Hotmail or Yahoo! accounts. Mine doesn't store any emails, e-receipts or passwords.
     </p> 
