--- a/app/views/user_mailer/new_user.text.html.erb
+++ b/app/views/user_mailer/new_user.text.html.erb
@@ -34,7 +34,7 @@
 		<p style="color: #888; max-width: 300px; margin-left: auto; margin-right: auto; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">
     	<b>Import your purchase history</b><br>
-    	Connect your Gmail or Yahoo! account to create your Mine profile in seconds.
+    	Connect your Gmail, Hotmail or Yahoo! account to create your Mine profile in seconds.
     </p> 
     
     <a href="<%=root_url(:src => @source)%>">
