--- a/app/views/user_mailer/run_importer.text.html.erb
+++ b/app/views/user_mailer/run_importer.text.html.erb
@@ -9,7 +9,7 @@
   	<p style="font-size:18px; color: #555; line-height: 140%; 
     	font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased;">  
 
-			Connect your Gmail or Yahoo! account, and Mine can build your profile, automagically.
+			Connect your Gmail, Hotmail or Yahoo! account, and Mine can build your profile, automagically.
 			
 		</p>
 		
