efficient separators and other tweaks

--- a/app/views/invites/new.html.erb
+++ b/app/views/invites/new.html.erb
@@ -107,7 +107,7 @@
     rows="4" ></textarea>
 	
 	<button id="create_email_invite" 
-    class="btn shaded" 
+    class="btn btn-silver shaded" 
     style="width: 100px;" 
     type="submit">
 		<span class="hide-when-loading">
