--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -108,7 +108,7 @@
 	
   <div style="border-top:none; padding-left: 20px; background: none; padding-bottom: 0px;">
   	<%=submit_tag "Save Changes",
-                  :class  => 'btn shaded',
+                  :class  => 'btn btn-silver shaded',
                   :name   => nil%>
   </div>
 	
