--- a/app/views/users/connections.html.erb
+++ b/app/views/users/connections.html.erb
@@ -20,7 +20,7 @@
                 <a href="<%=user_path(user.handle,:src => "connections")%>" 
                   class="dark">
                   <%=image_tag user.square_image_url, 
-                      :class => "user-photo m shaded rounded-3"%>
+                      :class => "user-photo m rounded-3"%>
                   <%=user.full_name%>
                 </a>
                 
@@ -53,7 +53,7 @@
                 <a href="<%=user_path(user.handle,:src => "connections")%>" 
                   class="dark">
                   <%=image_tag user.square_image_url, 
-                      :class => "user-photo m shaded rounded-3"%>
+                      :class => "user-photo m rounded-3"%>
                   <%=user.full_name%>
                 </a>
                 
