--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,7 +41,7 @@
 		        			title="<%=user.full_name%>">
 		        			
 				      		<%=image_tag user.square_image_url,
-	                    :class => "user-photo s shaded rounded-2"%>
+	                    :class => "user-photo s rounded-2"%>
 				      	</a>
 			        </li>
 		              
@@ -79,7 +79,7 @@
 		        			title="<%=user.full_name%>">
 		        			
 				      		<%=image_tag user.square_image_url,
-	                    :class => "user-photo s shaded rounded-2"%>
+	                    :class => "user-photo s rounded-2"%>
 				      	</a>
 			        </li>
 	 
