--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -122,9 +122,8 @@
 <div id="user_suggestions_box" style="display:none">
   <div class="box-title" style="margin-top: -6px;">
     People to follow
-    <span style="padding: 0 4px;">
-			&bull;
-		</span> 
+    <span class="separator">
+    </span>
     <a class="dark" 
       style="" 
       href="<%=user_suggestions_path(:src => 'feed')%>">
@@ -180,9 +179,8 @@
     class="dark" 
     href="javascript:void(0)"
     onclick="$('#creation').show();$('#purchase_query').focus();$('#' + this.id).hide();">
-  	<span style="padding: 0 4px; color: #999 !important;">
-			&bull;
-		</span> 
+    <span class="separator" style="color: #999 !important;">
+    </span>
     Add a purchase
 	</a>
 </div>
