--- a/app/views/users/suggestions.html.erb
+++ b/app/views/users/suggestions.html.erb
@@ -1,9 +1,7 @@
 <div id="user_suggestions_box">
 	<div class="box-title" style="margin-top: -6px;">
 		<a class="dark" style="" href="/">Home </a>
-		<span style="padding: 0 4px;">
-			&bull;
-		</span> 
+		<span class="separator"></span>
 		People to follow
 	 </div>
 	 
