fixed initial feed jolt on load

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -12,7 +12,7 @@
 
 <!-- email importer box -->
 <div class="well-box border-box rounded-8 rwd-hide" 
-  style="margin: 2px 0 18px;">
+  style="margin: 2px 0 12px;">
   <div class="user-action-box relative" style="border: none !important; margin-bottom: -9px;">
     <%=image_tag "import-star-ccc-32-2x.png",
           :style => "width: 32px; top: 0; left: 0;",
@@ -120,7 +120,7 @@
 
 
 <div id="user_suggestions_box" style="display:none">
-  <div class="box-title" style="margin-top: -6px;">
+  <div class="box-title">
     People to follow
     <span class="separator">
     </span>
