tooltip spacing opened

--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -24,6 +24,8 @@
 span.separator { padding: 0 3px; }
 span.separator:before { content: "•"; }
 
+.tooltip { line-height: 140%; }
+
 .f:after {
 	content: "f";
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important; 
