--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -13,7 +13,7 @@
 		    href="javascript:void(0)" 
 		    style="width: 30%;"
         rel="tooltip"
-        title="Gmail or Google Apps account"
+        title="Gmail or Google Apps"
         data-placement="bottom">
 		  <%=image_tag "logos/email-gmail-logo-30.png",
 		      :class => "hide-when-loading"%>
@@ -26,7 +26,7 @@
 		    style="width: 30%; border-left: 1px solid #ababab; 
           border-left: 1px solid rgba(0,0,0,0.16);"
         rel="tooltip"
-        title="Hotmail, Outlook.com, Live or MSN account"
+        title="Hotmail, Outlook.com, Live or MSN"
         data-placement="bottom">
 		  <%=image_tag "logos/email-hotmail-logo-30.png",
 		      :class => "hide-when-loading"%>
@@ -39,7 +39,7 @@
 		    style="width: 30%; border-left: 1px solid #ababab; 
           border-left: 1px solid rgba(0,0,0,0.16);"
         rel="tooltip"
-        title="Yahoo, sbcglobal.net, att.net, verizon.net, bellsouth.net, swbell.net or ameritech.net account"
+        title="Yahoo, sbcglobal.net, att.net, verizon.net, bellsouth.net, swbell.net or ameritech.net"
         data-placement="bottom">
 		  <%=image_tag "logos/email-yahoo-logo-30.png",
 		      :class => "hide-when-loading"%>
